Finalização com relatório

--- a/AluraStoreBr - André Lopes.ipynb
+++ b/AluraStoreBr - André Lopes.ipynb
@@ -1152,7 +1152,8 @@
         "✅ A Loja 1 teve o maior faturamento.  \n",
         "✅ A Loja 4 teve o menor faturamento.\n",
         "\n",
-        "![G1](URL-da-Imagem)\n",
+        "**Gráfico:** Faturamento por loja.\n",
+        "![G1](https://raw.githubusercontent.com/agenciadigitalslz/ChallengeAluraStore/refs/heads/main/graficos/G1.png)\n",
         "\n",
         "---\n",
         "\n",
@@ -1204,6 +1205,7 @@
         "✅ A Loja 4 apresentou um volume geral de vendas um pouco menor.\n",
         "\n",
         "**Gráficos:** Gráficos de pizza para cada loja.\n",
+        "![G1](https://raw.githubusercontent.com/agenciadigitalslz/ChallengeAluraStore/refs/heads/main/graficos/G2.png)\n",
         "\n",
         "---\n",
         "\n",
@@ -1220,6 +1222,7 @@
         "✅ A Loja 1 apresentou a pior média de avaliação.\n",
         "\n",
         "**Gráfico:** Barras comparando médias de avaliação (verde para melhor, vermelho para pior).\n",
+        "![G1](https://raw.githubusercontent.com/agenciadigitalslz/ChallengeAluraStore/refs/heads/main/graficos/G3.png)\n",
         "\n",
         "---\n",
         "\n",
@@ -1236,8 +1239,6 @@
         "\n",
         "✅ Observa-se que produtos de linha branca (eletrodomésticos) e móveis são mais populares.\n",
         "\n",
-        "**Gráficos:** Barras individuais para produtos mais vendidos (verde) e produtos menos vendidos (vermelho).\n",
-        "\n",
         "---\n",
         "\n",
         "## 🚚 5. Frete Médio por Loja\n",
@@ -1253,6 +1254,7 @@
         "✅ A Loja 1 apresentou o maior frete médio.\n",
         "\n",
         "**Gráfico:** Barras coloridas indicando o menor (verde) e o maior (vermelho) frete médio.\n",
+        "![G1](https://raw.githubusercontent.com/agenciadigitalslz/ChallengeAluraStore/refs/heads/main/graficos/G4.png)\n",
         "\n",
         "---\n",
         "\n",
@@ -1282,6 +1284,15 @@
       "metadata": {
         "id": "uSRyQ6vkERDu"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "E2G5_3ivKvBT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
